--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
 </head>
 <body>
 
-<div class="container">
-  <h2>Tentang Kami</h2>
-  <p>Kami percaya bahwa setiap orang bisa belajar, dari mana saja dan kapan saja. Karena itu, kami mencoba menghadirkan cara belajar yang lebih sederhana, terarah, dan mudah dipahami - melalui learning points berbasis visual mind map.</p>
+<<div class="container">
+  <h2>Menu Pembelajaran Interaktif: Learning Points & Tools Pemberdayaan</h2>
+  <p>Temukan rangkaian Learning Points dari berbagai materi strategis dalam pengembangan desa dan pemberdayaan masyarakat. Setiap menu menyajikan ringkasan pembelajaran yang aplikatif dan kontekstual:</p>
 
-<p>Di tengah banyaknya informasi dan sumber belajar yang tersebar di berbagai tempat, kami berusaha merangkumnya menjadi sesuatu yang lebih ringkas dan bermakna. Setiap topik kami sajikan dalam bentuk peta konsep visual, agar kita bisa sama-sama:</p>
-<ul>
-<li>Menangkap inti materi dengan cepat</li>
-<li>Melihat hubungan antar ide secara lebih jelas</li>
-<li>Belajar mandiri tanpa harus bingung mulai dari mana</li>
-<li>Lebih mudah mengingat dan menerapkan apa yang sudah dipelajari</li>
-</ul>
-<p>Kami bukan yang paling tahu. Kami hanya ingin berbagi cara belajar yang menurut kami bisa membantu, seperti halnya membantu kami sendiri. Semua konten kami susun dari berbagai sumber yang kredibel, lalu kami olah menjadi learning points yang praktis dan aplikatif.</p>
-<p>Semoga apa yang kami hadirkan di sini bisa jadi teman perjalanan belajarmu - entah untuk menambah wawasan, mendalami materi pelajaran, atau sekadar memuaskan rasa ingin tahu.</p>
-<p>Terima kasih, Selamat belajar. Pelan-pelan, tapi terus maju.</p>
+  <ol style="line-height: 1.6;">
+    <li>
+      <strong>Koperasi Merah Putih #1</strong><br>
+      Menggali esensi dan praktik berkoperasi sebagai fondasi ekonomi kerakyatan di tingkat desa.
+    </li>
+    <li>
+      <strong>LMS Pamong Desa #2</strong><br>
+      Panduan pemanfaatan <em>Learning Management System</em> bagi pamong desa untuk memperkuat kapasitas pembelajaran daring.
+    </li>
+    <li>
+      <strong>BUMDesa #3 <span style="color: #e67e22;">(underconstruction)</span></strong><br>
+      Kerangka awal analisis dan pembelajaran mengenai tata kelola dan penguatan Badan Usaha Milik Desa (BUMDesa).
+    </li>
+    <li>
+      <strong>Tools Pemberdayaan #4</strong><br>
+      Kumpulan alat bantu dan pendekatan praktis untuk mendukung proses pemberdayaan masyarakat desa.
+    </li>
+  </ol>
   <div id="accordion">
     <div class="card">
       <div class="card-header">
